--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h2>Hi I am going to work on mern stack </h2>
+    <div>
+        <h1> ABES engineering college </h1>
+    </div>
 </body>
 </html>
